# Aarambam

./: CMakeLists.txt  README.md  pyproject.toml
Aarambam/: __init__.py  cli.py  utils.py
Aarambam/2LPT/: Makefile  allvars.c  allvars.h  main.c  power.c  read_param.c
Aarambam/LPT/Basis/: allvars.c  allvars.h  cli.py  main.c  read_param.c  save.c
Aarambam/LPT/ResBasis/: allvars.c  allvars.h  cli.py  main.c  power.c  proto.h  read_param.c
Aarambam/basis/: __init__.py  cmbbest.pyx  decompose.py
Aarambam/defaults/: LPTConfig
Aarambam/models/: Colliders.py  Resonances.py  SingleField.py  __init__.py
docs/: requirements.txt
docs/source/: api_reference.rst  cli.md  cli.rst  conf.py  index.rst  installation.rst
docs/source/api/: aarambam_toc.rst
examples/: BasisDecomposition.ipynb  MakeICs.py  MakeICsRes.py
