[build-system]
requires = [
  "scikit-build-core>=0.9",
  "Cython>=3.0",
  "numpy>=1.22",        # if your Cython uses NumPy; drop if not
]
build-backend = "scikit_build_core.build"

[project]
name = "Aarambam"
version = "0.1.0"
description = "Aarambam: 2LPT + basis tools"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "You" }]

[project.scripts]
Aarambam-2LPT-Basis = "Aarambam.LPT.Basis.cli:main"

[tool.scikit-build]
# helpful verbosity and wheel tweaks
cmake.verbose = true
wheel.expand-macos-universal-tags = true
